--- a/assets/scss/partials/_variables.scss
+++ b/assets/scss/partials/_variables.scss
@@ -1,3 +1,5 @@
+// this theme is designed & developed for Mediasoft Data Systems Ltd. By Mahbubur Rahman on July 2023. Do not copy any Part or any content from this site. All rights reserved to Mediasoft Data Systems Ltd.
+
 $ma-black: 'montserrat_alternatesblack';
 $ma-BlkIt: 'montserrat_alternatesBlkIt';
 $ma-bold : 'montserrat_alternatesbold';
