--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -1,3 +1,508 @@
+@keyframes scroll {
+  0% {
+    transform: translateY(0px);
+  }
+  100% {
+    transform: translateY(8px);
+  }
+}
+@keyframes RL_smooth {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(5px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+@keyframes slide_up_down {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-20px);
+  }
+}
+@keyframes tptranslateX2 {
+  0% {
+    transform: translateX(-30px);
+  }
+  100% {
+    transform: translateX(20px);
+  }
+}
+@keyframes rotate-center {
+  0% {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+@keyframes scale_up_down {
+  0% {
+    transform: scale(0.9);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@keyframes dash {
+  to {
+    stroke-dashoffset: 0px;
+    stroke-dasharray: 3000;
+  }
+}
+@keyframes tpupdown {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-20px);
+  }
+}
+@keyframes tpswing {
+  0% {
+    transform: rotate(6deg);
+  }
+  100% {
+    transform: rotate(-6deg);
+  }
+}
+@keyframes borderanimate2 {
+  0% {
+    transform: translate(-50%, -50%) scale(0.8);
+  }
+  60% {
+    opacity: 1;
+  }
+  100% {
+    transform: translate(-50%, -50%) scale(2.5);
+    opacity: 0;
+  }
+}
+@keyframes bounceInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(2000px);
+  }
+  60% {
+    opacity: 1;
+    transform: translateY(-30px);
+  }
+  80% {
+    transform: translateY(10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+@keyframes moving {
+  0% {
+    transform: translatey(0px);
+  }
+  25% {
+    transform: translatex(20px);
+  }
+  50% {
+    transform: translatey(-20px);
+  }
+  75% {
+    transform: translatex(-20px);
+  }
+  100% {
+    transform: translatey(0px);
+  }
+}
+@keyframes about-circle {
+  0% {
+    transform: translateX(100px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
+@keyframes services-triangle {
+  0% {
+    transform: rotate(0deg) translateX(-50px);
+  }
+  100% {
+    transform: rotate(360deg) translateY(100px);
+  }
+}
+@keyframes hero-3-dot-2 {
+  0% {
+    transform: translateY(-50px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+@keyframes tfLeftToRight {
+  49% {
+    transform: translateX(30%);
+  }
+  50% {
+    opacity: 0;
+    transform: translateX(-30%);
+  }
+  51% {
+    opacity: 1;
+  }
+}
+@keyframes tfLeftToRight2 {
+  0% {
+    transform: translateX(30%) translateY(1px);
+  }
+  49% {
+    transform: translateX(30%) translateY(1px);
+  }
+  50% {
+    opacity: 0;
+    transform: translateX(-30%) translateY(1px);
+  }
+  51% {
+    opacity: 1;
+  }
+}
+@keyframes rotate2 {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+@keyframes rotate3 {
+  from {
+    transform: rotateZ(0deg);
+  }
+  to {
+    transform: rotateZ(360deg);
+  }
+}
+@keyframes circle-animations {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes moving {
+  0% {
+    transform: translatey(0px);
+  }
+  20% {
+    transform: translateX(-50px);
+  }
+  50% {
+    transform: translatey(-40px);
+  }
+  100% {
+    transform: translatey(0px);
+  }
+}
+@keyframes leftright {
+  0% {
+    transform: translatex(0);
+  }
+  50% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+@keyframes movinglight {
+  0% {
+    transform: translatey(0px);
+  }
+  20% {
+    transform: translateX(-70px);
+  }
+  50% {
+    transform: translatey(-70px);
+  }
+  100% {
+    transform: translatey(0px);
+  }
+}
+@keyframes movinglight2 {
+  0% {
+    transform: translatey(0px);
+  }
+  20% {
+    transform: translateX(70px);
+  }
+  50% {
+    transform: translatey(70px);
+  }
+  100% {
+    transform: translatey(0px);
+  }
+}
+@keyframes movingtop {
+  0% {
+    transform: translatey(0px);
+  }
+  20% {
+    transform: translatey(70px);
+  }
+  50% {
+    transform: translatey(-70px);
+  }
+  100% {
+    transform: translatey(0px);
+  }
+}
+@keyframes circle-animation {
+  0% {
+    right: 0;
+  }
+  50% {
+    right: 100%;
+  }
+  100% {
+    right: 0%;
+  }
+}
+@keyframes section_stroke {
+  0% {
+    stroke-dashoffset: 560;
+  }
+  50% {
+    stroke-dashoffset: 560;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+@keyframes headerSlideDown {
+  0% {
+    margin-top: -150px;
+  }
+  100% {
+    margin-top: 0;
+  }
+}
+@keyframes movingleftright1 {
+  0% {
+    transform: translateX(0) translateY(0);
+  }
+  40% {
+    transform: translateX(50px) translateY(-50px);
+  }
+  75% {
+    transform: translateX(200px);
+  }
+  100% {
+    transform: translateY(0) translateX(0);
+  }
+}
+@keyframes circle-animation-2 {
+  0% {
+    left: 0;
+  }
+  50% {
+    left: 100%;
+  }
+  100% {
+    left: 0%;
+  }
+}
+@keyframes scroll1 {
+  0% {
+    top: 0%;
+  }
+  50% {
+    top: 95%;
+  }
+  100% {
+    top: 0%;
+  }
+}
+@keyframes movingX {
+  0% {
+    transform: translateY(0) rotateX(0deg);
+  }
+  50% {
+    transform: translateY(calc(100vh - 100%));
+  }
+  51% {
+    transform: translateY(calc(100vh - 100%)) rotateX(180deg);
+  }
+  100% {
+    transform: translateY(0) rotateX(180deg);
+  }
+}
+@keyframes tracking-in-contract-bck {
+  0% {
+    letter-spacing: 20px;
+    transform: translateZ(150px);
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    transform: translateZ(0);
+    opacity: 1;
+  }
+}
+@keyframes tracking-in-contract-bck-2 {
+  0% {
+    letter-spacing: 20px;
+    transform: translateZ(150px) translateY(150px);
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    transform: translateZ(0);
+    opacity: 1;
+  }
+}
+@keyframes animationglob {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes zoom {
+  0% {
+    transform: scale(0.7);
+  }
+  50% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0.7);
+  }
+}
+@keyframes sliderShape {
+  0%, 100% {
+    border-radius: 42% 58% 70% 30%/45% 45% 55% 55%;
+    transform: translate3d(0, 0, 0) rotateZ(0.01deg);
+  }
+  34% {
+    border-radius: 36% 64% 41% 59%/54% 41% 59% 46%;
+    transform: translate3d(1px, 5px, 2px) rotateZ(0.01deg);
+  }
+  50% {
+    transform: translate3d(0, 0, 0) rotateZ(0.01deg);
+  }
+  67% {
+    border-radius: 100% 60% 60% 100%/100% 100% 60% 60%;
+    transform: translate3d(-1px, -3px, -2px) rotateZ(0.01deg);
+  }
+}
+@keyframes zoom2 {
+  0% {
+    transform: scale(0.9);
+  }
+  50% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0.9);
+  }
+}
+@keyframes wobble-vertical {
+  10% {
+    transform: translateY(-10px);
+  }
+  50% {
+    transform: skew(15deg);
+  }
+  80% {
+    transform: rotate(10deg);
+  }
+  100% {
+    transform: translate(0);
+  }
+}
+@keyframes section-highlight {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 100%;
+  }
+}
+@keyframes widthcalc {
+  0% {
+    width: 20%;
+  }
+  50% {
+    width: 50%;
+  }
+  75% {
+    width: 90%;
+  }
+  90% {
+    opacity: 75%;
+  }
+  90% {
+    opacity: 100%;
+  }
+}
+/* right bounce */
+@keyframes bounceRight {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-35px);
+  }
+  60% {
+    transform: translateY(-20px);
+  }
+}
+/* /right bounce */
+@keyframes icon-bounce {
+  0%, 100%, 20%, 50%, 80% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-10px);
+  }
+  60% {
+    transform: translateY(-5px);
+  }
+}
+@keyframes light-one {
+  0% {
+    opacity: 1;
+  }
+  25% {
+    opacity: 0.4;
+  }
+  50% {
+    opacity: 0.6;
+  }
+  75% {
+    opacity: 0.8;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes preloader {
+  0% {
+    transform: scale(0, 0);
+    opacity: 0.5;
+  }
+  100% {
+    transform: scale(1, 1);
+    opacity: 0;
+  }
+}
 body {
   box-sizing: border-box;
   scroll-behavior: smooth;
@@ -30,4 +535,192 @@ img {
 p {
   margin: 0;
   padding: 0;
+}
+
+h1 {
+  transition: all 0.3s ease-out 0s;
+  -webkit-transition: all 0.3s ease-out 0s;
+  -moz-transition: all 0.3s ease-out 0s;
+  -ms-transition: all 0.3s ease-out 0s;
+  -o-transition: all 0.3s ease-out 0s;
+}
+
+h2 {
+  transition: all 0.3s ease-out 0s;
+  -webkit-transition: all 0.3s ease-out 0s;
+  -moz-transition: all 0.3s ease-out 0s;
+  -ms-transition: all 0.3s ease-out 0s;
+  -o-transition: all 0.3s ease-out 0s;
+}
+
+h3 {
+  transition: all 0.3s ease-out 0s;
+  -webkit-transition: all 0.3s ease-out 0s;
+  -moz-transition: all 0.3s ease-out 0s;
+  -ms-transition: all 0.3s ease-out 0s;
+  -o-transition: all 0.3s ease-out 0s;
+}
+
+h4 {
+  transition: all 0.3s ease-out 0s;
+  -webkit-transition: all 0.3s ease-out 0s;
+  -moz-transition: all 0.3s ease-out 0s;
+  -ms-transition: all 0.3s ease-out 0s;
+  -o-transition: all 0.3s ease-out 0s;
+}
+
+h5 {
+  transition: all 0.3s ease-out 0s;
+  -webkit-transition: all 0.3s ease-out 0s;
+  -moz-transition: all 0.3s ease-out 0s;
+  -ms-transition: all 0.3s ease-out 0s;
+  -o-transition: all 0.3s ease-out 0s;
+}
+
+h6 {
+  transition: all 0.3s ease-out 0s;
+  -webkit-transition: all 0.3s ease-out 0s;
+  -moz-transition: all 0.3s ease-out 0s;
+  -ms-transition: all 0.3s ease-out 0s;
+  -o-transition: all 0.3s ease-out 0s;
+}
+
+.home-slider-main {
+  position: relative;
+  overflow: hidden;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-top: 200px;
+  padding-left: 310px;
+  padding-right: 310px;
+}
+.home-slider-main .scroll-bg {
+  position: absolute;
+  bottom: -2px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.home-slider-main .scroll-bg img {
+  transition: all 0.3s ease-out 0s;
+  -webkit-transition: all 0.3s ease-out 0s;
+  -moz-transition: all 0.3s ease-out 0s;
+  -ms-transition: all 0.3s ease-out 0s;
+  -o-transition: all 0.3s ease-out 0s;
+}
+.home-slider-main .mouse-scroll {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 6px;
+  z-index: 5;
+}
+.home-slider-main .mouse-scroll a.mouse-scroll-btn {
+  display: inline-block;
+  width: 16px;
+  height: 25px;
+  border: 2px solid #5F6168;
+  border-radius: 30px;
+  outline: none;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 28px;
+  z-index: 5;
+}
+.home-slider-main .mouse-scroll a.mouse-scroll-btn::before {
+  position: absolute;
+  top: 4px;
+  left: 3px;
+  content: "";
+  height: 6px;
+  width: 6px;
+  border: 2px solid #5F6168;
+  border-radius: 50%;
+  animation: scroll 1s infinite ease-in-out alternate;
+}
+.home-slider-main .mouse-scroll span {
+  display: block;
+  font-weight: 500;
+  font-size: 14px;
+  color: #5F6168;
+  transform: translateY(-4px);
+}
+.home-slider-main .shape-img-1 {
+  position: absolute;
+  top: 68%;
+  left: 30%;
+}
+.home-slider-main .shape-img-1 svg path {
+  stroke: #fff;
+  stroke-dasharray: 2300;
+  stroke-dashoffset: 3500;
+  animation: dash 4s linear forwards;
+}
+.home-slider-main .title-box h3 {
+  font-size: 95px;
+  line-height: 1;
+  letter-spacing: -0.04em;
+  padding-bottom: 35px;
+  color: #fff;
+  font-family: "montserrat_alternatesbold";
+  text-transform: capitalize;
+  font-weight: 600;
+  margin: 0;
+}
+.home-slider-main .title-box p {
+  color: #fff;
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+.home-slider-main .button-box {
+  padding-bottom: 110px;
+}
+.home-slider-main .button-box .btn-green {
+  display: inline-block;
+  color: #fff;
+  height: 52px;
+  line-height: 52px;
+  padding: 0 30px;
+  font-weight: 600;
+  font-size: 16px;
+  text-align: center;
+  letter-spacing: -0.02em;
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+  z-index: 1;
+  transition: 0.5s;
+  background: linear-gradient(180deg, #B1FF36 -23%, #1D863C 100%);
+  box-shadow: 0px 2px 3px rgba(3, 22, 3, 0.2);
+  border-radius: 10px;
+  text-transform: uppercase;
+}
+.home-slider-main .user-box {
+  padding-bottom: 70px;
+  position: relative;
+}
+.home-slider-main .user-box .user-text {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  color: rgba(255, 255, 255, 0.6);
+}
+.home-slider-main .user-box .user-text span {
+  padding: 0 8px;
+  color: white;
+}
+.home-slider-main .user-box .user-img {
+  padding-top: 12px;
+}
+.home-slider-main .user-box .user-shape {
+  position: absolute;
+  top: 13px;
+  left: 39px;
+}
+.home-slider-main .user-box .user-shape svg path {
+  stroke: #fff;
+  stroke-dasharray: 560;
+  stroke-dashoffset: 560;
+  animation: section_stroke 2s linear forwards;
 }/*# sourceMappingURL=style.css.map */
