--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -39,3 +39,193 @@ p {
   margin: 0;
   padding: 0;
 }
+
+
+@for $i from 1 through 6 {
+  h#{$i} {
+    transition: all 0.3s ease-out 0s;
+    -webkit-transition: all 0.3s ease-out 0s;
+    -moz-transition: all 0.3s ease-out 0s;
+    -ms-transition: all 0.3s ease-out 0s;
+    -o-transition: all 0.3s ease-out 0s;
+  }
+}
+
+//  ======================================================================
+//  home slider section start from here 
+//  ======================================================================
+
+.home-slider-main {
+  position: relative;
+  overflow: hidden;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-top: 200px;
+  padding-left: 310px;
+  padding-right: 310px;
+
+  .scroll-bg {
+    position: absolute;
+    bottom: -2px;
+    left: 50%;
+    transform: translateX(-50%);
+
+    img {
+      transition: all 0.3s ease-out 0s;
+      -webkit-transition: all 0.3s ease-out 0s;
+      -moz-transition: all 0.3s ease-out 0s;
+      -ms-transition: all 0.3s ease-out 0s;
+      -o-transition: all 0.3s ease-out 0s;
+    }
+  }
+
+  .mouse-scroll {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 6px;
+    z-index: 5;
+
+    a.mouse-scroll-btn {
+      display: inline-block;
+      width: 16px;
+      height: 25px;
+      border: 2px solid #5F6168;
+      border-radius: 30px;
+      outline: none;
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      bottom: 28px;
+      z-index: 5;
+
+      &::before {
+        position: absolute;
+        top: 4px;
+        left: 3px;
+        content: "";
+        height: 6px;
+        width: 6px;
+        border: 2px solid #5F6168;
+        border-radius: 50%;
+        animation: scroll 1s infinite ease-in-out alternate;
+      }
+    }
+
+    span {
+      display: block;
+
+      font-weight: 500;
+      font-size: 14px;
+      color: #5F6168;
+      transform: translateY(-4px);
+    }
+  }
+
+  .shape-img-1 {
+    position: absolute;
+    top: 68%;
+    left: 30%;
+
+    svg {
+      path {
+        stroke: #fff;
+        stroke-dasharray: 2300;
+        stroke-dashoffset: 3500;
+        animation: dash 4s linear forwards;
+      }
+    }
+  }
+
+  .title-box {
+    h3 {
+
+      font-size: 95px;
+      line-height: 1;
+      letter-spacing: -0.04em;
+      padding-bottom: 35px;
+      color: #fff;
+      font-family: $ma-bold;
+      text-transform: capitalize;
+      font-weight: 600;
+      margin: 0;
+    }
+
+    p {
+      color: #fff;
+      font-size: 20px;
+      margin-bottom: 20px;
+    }
+  }
+
+  .button-box {
+    padding-bottom: 110px;
+
+    .btn-green {
+      display: inline-block;
+      color: #fff;
+      height: 52px;
+      line-height: 52px;
+      padding: 0 30px;
+      font-weight: 600;
+      font-size: 16px;
+      text-align: center;
+      letter-spacing: -0.02em;
+      position: relative;
+      overflow: hidden;
+      display: inline-block;
+      z-index: 1;
+      transition: 0.5s;
+      background: linear-gradient(180deg, #B1FF36 -23%, #1D863C 100%);
+      box-shadow: 0px 2px 3px rgba(3, 22, 3, 0.2);
+      border-radius: 10px;
+      text-transform: uppercase;
+    }
+  }
+
+  .user-box {
+    padding-bottom: 70px;
+    position: relative;
+
+    .user-text {
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 17px;
+      color: rgba(255, 255, 255, 0.6);
+
+      span {
+        padding: 0 8px;
+        color: #ffff;
+      }
+    }
+
+    .user-img {
+      padding-top: 12px;
+
+    }
+
+    .user-shape {
+      position: absolute;
+      top: 13px;
+      left: 39px;
+
+      svg {
+        path {
+          stroke: #fff;
+          stroke-dasharray: 560;
+          stroke-dashoffset: 560;
+          animation: section_stroke 2s linear forwards;
+
+        }
+      }
+    }
+  }
+}
+
+
+
+
+// ======================================================================
+// home slider section end here 
+// ======================================================================
